--- a/integrity-shield-operator/bundle/manifests/integrity-shield-operator.clusterserviceversion.yaml
+++ b/integrity-shield-operator/bundle/manifests/integrity-shield-operator.clusterserviceversion.yaml
@@ -265,6 +265,8 @@ spec:
                       - containerPort: 8443
                         name: https
                     resources: {}
+                    securityContext:
+                      runAsNonRoot: true
                   - args:
                       - --health-probe-bind-address=:8081
                       - --metrics-bind-address=127.0.0.1:8080
