--- a/integrity-shield-operator/config/default/manager_auth_proxy_patch.yaml
+++ b/integrity-shield-operator/config/default/manager_auth_proxy_patch.yaml
@@ -19,6 +19,8 @@ spec:
         ports:
         - containerPort: 8443
           name: https
+        securityContext:
+          runAsNonRoot: true
       - name: manager
         args:
         - "--health-probe-bind-address=:8081"
