--- a/integrity-shield-operator/test/deploy/test3-mic-rule-keyconfig-secret.yaml
+++ b/integrity-shield-operator/test/deploy/test3-mic-rule-keyconfig-secret.yaml
@@ -11,7 +11,7 @@ spec:
     namespaces:
     - test-ns
   parameters:
-    constraintName: configmap-constraint
+    constraintName: configmap-constraint-keyconfig-secret
     objectSelector:
     - name: test-configmap-inscope
     - name: test-configmap-no-sign
